--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,7 @@ project:
 website:
   title: "Zihan (Zoe) Tang"
   navbar:
+    logo: headshot.jpg
     right:
       - text: "Home"
         href: index.qmd
@@ -17,6 +18,9 @@ website:
 
 format:
   html:
-    theme: cosmo
+    theme:
+      light: cosmo
+      dark: darkly
+    css: styles.css
     toc: true
     code-copy: true
