Update some setup of Name

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: .
 
 website:
-  title: "Zihan (Zoe) Tang"
+  title: "Zihan Tang"
   navbar:
     right:
       - text: "Home"
